<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="25dp"
        android:text="@string/txtTitle"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:text="@string/txtSubTitle"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtAssetCount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="15dp"
        android:paddingLeft="20dp"
        android:text="@string/txtAssetCount"
        android:textAlignment="textStart"
        android:textSize="24sp"
        android:typeface="normal" />

    <TextView
        android:id="@+id/txtAssetValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="50dp"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:text="@string/txtAssetValue"
        android:textAlignment="textStart"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/black"
        android:text="@string/btnAdditem"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnSearch"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnInvList"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btnInvList"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp" />

</LinearLayout>