<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.InventoryEditActivity"
    tools:showIn="@layout/activity_inventory_edit">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/txtEditName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/item_name"
            android:inputType="textPersonName" />

        <ImageView
            android:id="@+id/imgDetailItem"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="5dp"
            android:layout_weight="1"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <EditText
            android:id="@+id/txtEditCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Cost"
            android:inputType="numberDecimal"
            tools:text="Cost" />

        <EditText
            android:id="@+id/txtEditQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/quantity"
            android:inputType="number"
            tools:text="Quantity" />


        <EditText
            android:id="@+id/txtEditShelf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Shelf"
            android:inputType="text"
            tools:text="Shelf" />

        <EditText
            android:id="@+id/txtEditBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/box"
            android:inputType="textPersonName"
            tools:text="Box" />

        <EditText
            android:id="@+id/txtEditModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/model"
            android:inputType="textPersonName"
            tools:text="Model" />

        <EditText
            android:id="@+id/txtEditBrand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/brand"
            android:inputType="textPersonName"
            tools:text="Brand" />

        <EditText
            android:id="@+id/txtEditSupplier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/supplier_name"
            android:inputType="text"
            tools:text="Supplier" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>