<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="90dp">

    <ImageView
        android:id="@+id/imgThumb"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight=".2"
        android:background="@drawable/splash_inventory" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight=".5"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtItemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="2dp"
            android:textAlignment="center"
            android:textSize="18sp"
            tools:text="Item Title" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtShelfLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shelfLabel"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtItemShelf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textAlignment="center"
                android:textSize="16sp"
                tools:text="Loc" />

            <TextView
                android:id="@+id/txtBoxLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="10dp"
                android:text="@string/boxLabel"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtItemBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:textSize="16sp"
                tools:text="BoxName" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight=".3"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:gravity="end"
            android:labelFor="@+id/txtQty"
            android:padding="4dp"
            android:text="@string/qtyLabel"
            android:textAlignment="textEnd"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtQty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textAlignment="center"
            android:textSize="24sp" />
    </LinearLayout>

</LinearLayout>